# wdim-eval

./: .gitignore  README.md  pyproject.toml
docs/: EVAL_PLAYGROUND.md
lib/: __init__.py  audio.py  evaluate.py  fm_client.py  prompts.py  token_budget.py  transcript.py  whisper_transcribe.py
notebooks/: 01_extract_and_transcribe.ipynb  02_explore_transcript.ipynb  03_prompt_playground.ipynb  04_compare_formats.ipynb
